# agent-trust-control-plane

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.pytest_cache/v/cache/: nodeids.json
app/: config.py  dependencies.py  logging_config.py  main.py
app/__pycache__/routes/: traces.py
app/data/: sample_documents.json
app/models/: domain.py  schemas.py
app/routes/: health.py  query.py  reviews.py
app/services/: audit.py  evaluation.py  identity.py  llm.py  orchestrator.py  policy.py  retrieval.py  review.py
docs/: architecture.md  evaluation-framework.md  threat-model.md
frontend/: app.js  index.html
scripts/: seed_sample_docs.py
tests/: test_evaluation.py  test_policy.py  test_query_flow.py
